nw-po/fro-gat.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: frontend-gateway 
  namespace: md 
spec:
  podSelector: 
    matchLabels: 
      app: gateway 
  policyTypes:
  - Ingress 
  ingress:
  - from:
    - podSelector: 
       matchLabels:
         app: frontend 
    ports:
    - port: 3000
