nw-po/ord-db-eg.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: orderservice-to-db-egress
  namespace: md 
spec: 
  podSelector: 
    matchLabels:
      app: order-service 
  policyTypes: 
  - Egress 
  egress: 
  - to: 
    - podSelector: 
       matchLabels: 
         app: postgres-ord
    ports: 
     - port: 5432
