nw-po/ord-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-order-to-postgres
  namespace: md
spec:
  podSelector:
    matchLabels:
      app: postgres-ord
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: order-service
    ports:
    - port: 5432
