nw-po/usr-db-eg.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: userservice-db-egress
  namespace: md 
spec: 
  podSelector: 
    matchLabels: 
      app: user-service 
  policyTypes: 
  - Egress 
  egress: 
  - to: 
    - podSelector:
       matchLabels: 
         app: postgres-user
    ports: 
     - port: 5432
