nw-po/usr-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-user-to-postgres
  namespace: md
spec:
  podSelector:
    matchLabels:
      app: postgres-user
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: user-service
    ports:
    - port: 5432
